Grace/tests/gibbs/errors/t034.grace
// ERROR = P1002
dialect random
